samples/_failures_safe/1761378581_c3a6e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea15167a.c: In function ‘main’:
./samples/SAFE/__tmp_ea15167a.c:147:16: error: missing terminating " character
  147 |         printf("Determinant of
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ea15167a.c:147:9: error: expected expression at end of input
  147 |         printf("Determinant of
      |         ^~~~~~
./samples/SAFE/__tmp_ea15167a.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea15167a.c:147:9: error: expected declaration or statement at end of input
